[package]
name = "sr71-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = "0.12.12"
solana-sdk = '2.1.11'
solana-client = "2.1.11"
serde_json = "1"
serde = { version = "1", features = [ "derive" ]}
dotenv = "0.15.0"
tonic = "0.12.3"
prost = "0.13.4"
jito-sdk-rust = "0.1.0"
anyhow = "1.0.95"
tokio = "1.43.0"
