[package]
name = "sr71-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = "0.12.12"
solana-sdk = '2.1.12'
solana-client = "2.1.12"
serde_json = "1"
serde = { version = "1", features = [ "derive" ]}
dotenv = "0.15.0"
tonic = "*"
prost = "0.13.4"
jito-sdk-rust = "0.1.0"
anyhow = "1.0.95"
tokio = { version = "1", features = [ "full" ]}
dashmap = "6.1.0"
axum = "0.8.1"
